--- a/JavaScript/.settings/org.eclipse.wst.common.component
+++ b/JavaScript/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="IMCjs"/>
         <property name="java-output-path" value="/IMCjs/target/classes"/>
+        <property name="context-root" value="website"/>
     </wb-module>
 </project-modules>
